syntax = "proto3";

option java_package = "com.wlvpn.consumervpn.data";
option java_multiple_files = true;

// See more about this schema syntax in the following link
// https://developers.google.com/protocol-buffers/docs/proto3
message OpenVpnSettingsProto {

  enum InternetProtocolProto{
    UDP = 0;
    TCP = 1;
  }

  InternetProtocolProto internetProtocol = 1;
  bool autoReconnect = 2;
  bool scramble = 3;
  int32 port = 4;
  int32 scramblePort = 5;
  bool allowLan = 6;
  bool overrideMtu = 7;
}
